--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -2,5 +2,15 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+test = "test"
+solc = "0.8.20"
+remappings = [
+    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+    "forge-std/=lib/forge-std/src/"
+]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+[rpc_endpoints]
+localhost = "http://localhost:8545"
+monad = "https://rpc.monad.xyz"
