--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "wagmi": "^2.5.0",
+    "viem": "^2.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
